urcu/tests/ui/boxed/get-fail-0.stderr
error[E0505]: cannot move out of `boxed` because it is borrowed
  --> tests/ui/boxed/get-fail-0.rs:9:10
   |
6  |     let boxed = RcuBox::<u32>::new(0);
   |         ----- binding `boxed` declared here
7  |     let guard = context.rcu_read_lock();
8  |     let value = boxed.get(&guard);
   |                 ----- borrow of `boxed` occurs here
9  |     drop(boxed);
   |          ^^^^^ move out of `boxed` occurs here
10 |     log::info!("{:?}", value);
   |                        ----- borrow later used here
